regression changes on product service consumed

--- a/src/app/features/crm/components/bank/bank.component.html
+++ b/src/app/features/crm/components/bank/bank.component.html
@@ -575,7 +575,7 @@
             </ng-container>
             <ng-container *ngIf="visibleStatus.countryCode === 'Y'">
               <div class="col-6 mb-3">
-                <label for="countryCode" class="form-label">Country code</label>
+                <label for="countryCode" class="form-label">Country</label>
                 <p-dropdown
                   [options]="countriesData"
                   [(ngModel)]="selectedBankBranchCountry"
